<resources>
    <string name="default_web_client_id">371909187802-2ifqskpv5fk196tsvgubbhndsljmbr0b.apps.googleusercontent.com</string>

    <string name="app_name">HChat</string>
    <string name="copyright">Copyright: Pvhung</string>

    <!--    Screens-->

    <string name="user_infor_collection">User information</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>

    <!--    Welcome fragment-->
    <string name="welcome_title">Welcome to HChat</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <!--    Login fragment-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password"><u>Forget password ?</u></string>
    <string name="signin">Sign In</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="dont_have_account">Don\'t have account ? </string>
    <string name="already_have_acc">Already have account. <u>Login now</u></string>
    <string name="signup_underline"><u>Sign up</u></string>
    <!--    Signup fragment-->

    <string name="messages">Messages</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_user">Select user</string>
    <string name="type_a_message">Type a message</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
</resources>