<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.StartScreenFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:src="@drawable/background_welcome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:gravity="center"
        android:textSize="@dimen/text_header_size"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="64dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/signup"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="92dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/copyright" />

</LinearLayout>