<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activities.login.LoginActivity">


    <Button
        android:id="@+id/back_to_welcome_btn"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="394dp"
        android:layout_height="217dp"
        android:src="@drawable/logo_hchat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:gravity="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:hint="@string/username">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/username_input_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:hint="@string/password">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <Switch
            android:id="@+id/remember_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textStyle="italic"
            android:textColor="@color/blue"
            />

    </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/actions"
        android:text="@string/signin"
        />

    <LinearLayout
        android:id="@+id/or_linebreak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@+id/signin_button"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/or"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_weight="1"
            />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@+id/or_linebreak"
        android:text="@string/login_with_google"
        android:drawableLeft="@drawable/google_icon"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@+id/google_button"
        android:text="@string/login_with_facebook"
        android:drawableLeft="@drawable/facebook_icon"
        />


    <LinearLayout
        android:id="@+id/signup_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_underline"
            android:textColor="@color/blue"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/black"
        android:alpha="0.1"
        android:visibility="invisible"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_primary"
            android:indeterminate="true" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>