<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.user.UserInforCollectionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:title="@string/user_infor_collection" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/background_image"
            android:src="@drawable/default_avatar"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:riv_oval="true"
            />

        <TextView
            android:id="@+id/add_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Add image"/>

    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:background="@drawable/background_edittext"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birth_day_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birth_day"
            android:layout_width="match_parent"
            android:focusable="false"
            android:background="@drawable/background_edittext"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:background="@drawable/background_edittext"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_edit_text"
            android:layout_width="match_parent"
            android:background="@drawable/background_edittext"
            android:layout_height="wrap_content"
            android:hint="@string/city"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:background="@drawable/background_edittext"
            android:layout_height="wrap_content"
            android:hint="@string/address"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_12sdp"/>
</LinearLayout>