<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_8dp"
    tools:context=".activities.register.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:src="@drawable/logo_hchat"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_8dp"
        android:paddingBottom="@dimen/margin_8dp"

        app:layout_constraintTop_toBottomOf="@+id/username_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repassword_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repassword_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:hint="@string/repassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@+id/repassword_input_layout" />

    <TextView
        android:id="@+id/login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/already_have_acc"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>