<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.user.UserDetails">

    <LinearLayout
        android:id="@+id/topbar_chat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_theme_light_primary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/md_theme_light_onPrimary" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/profile"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </LinearLayout>


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/background_image"
        android:scaleType="center"
        app:riv_oval="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/avatar" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:hint="@string/display_name"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birth_day_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birth_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:focusable="false"
            android:hint="@string/dd_mm_yyyy" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/background_edittext"
            android:hint="@string/email"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_edit_text"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:hint="@string/city"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:hint="@string/address"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp">


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save" />


    </FrameLayout>


</LinearLayout>